2023-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/cineon.c (GenerateCineonTimeStamp): Correct strlcpy()
	length arguments so they are based on the actual destination
	buffer size.  Based on a report from Dirk Müller
	<dmueller@suse.de> that the test suite does not pass with the new
	glibc 2.38 (which finally provides strlcpy()/strlcat()) due to a
	fortify assertion.

2023-08-08  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c: CI chunk must have biSize only 12 or 40.

2023-08-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Default field pass count to 1
	since "Unsupported" tags return two arguments.

2023-08-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* jp2/src/libjasper/include/jasper/jas_types.h: MSVC 17.6.5 needs
	the _PFX_PTR definition.

	* coders/bmp.c (ReadBMPImage): Fix GCC 13.1.0 warning about
	quantum_bits being possibly used while uninitialized.  I don't see
	how that is possible based on current logic, but avoid the
	warning.

	* magick/gem.c (ExpandAffine): Mark as a pure function.

2023-07-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xcf.c (ReadXCFImage): Limit the maximum number of layers
	to the range of 'long'.  Adjust arithmetic/cast to avoid undefined
	behavior warning. Resolves SourceForge issue #713
	"coders/xcf.c:1926:53: warning: iteration 9223372036854775806
	invokes undefined behavior".

2023-07-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update the news!

	* Magick++/bin/GraphicsMagick++-config.in: Remember the name of
	the C++ compiler used, and suggest it in the usage message, as
	well as reproduce it via the '--cxx' option.

	* magick/GraphicsMagick-config.in: Remember the name of the C
	compiler used, and suggest it in the usage message, as well as
	reproduce it via the '--cc' option.

2023-07-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (ReadIPTCProfile): Fix malformed IPTC data