@@ -1,3 +1,8 @@
+2023-08-08  Fojtik Jaroslav  <JaFojtik@yandex.com>
+
+	* coders/bmp.c: Data behind declared BMP header should not be read.
+        It could poison newly converted image with garbage.
+
 2023-08-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/cineon.c (GenerateCineonTimeStamp): Correct strlcpy()
